@@ -747,6 +747,14 @@ a Rapid Serial Visual Projector for computer assisted speed reading.
 a simple, versatile, and easy-to-use TCP security port scanner written in C.
 </ul>
 
+<ul>
+<li><a href="http://gnomeldap.gnome.cl">GnomeLDAP</a> -
+a tool for modeling and administration of LDAP.
+</ul>
+
+
+
+
 
 <!-- COPY THESE LINES AND FILL IN TO ADD A NEW APP
 <ul>
