@@ -1,3 +1,7 @@
+2002-05-20  Damon Chaplin  <damon@ximian.com>
+
+	* apps.html: added GnomeLDAP.
+
 2002-05-01  Damon Chaplin  <damon@ximian.com>
 
 	* index.html: added link to Ishan's Glade port.
